copyright alignment fix

--- a/style.css
+++ b/style.css
@@ -446,6 +446,7 @@ tr:hover{
 	float: left;
 	color: #ccc;
 	text-shadow:#fff 0px 1px 0, #999 0 -1px 0;
+	padding-left: 5px;
 }
 
 #footer_info{
